# Solar-System-Sim

./: .gitattributes  .gitignore  Advanced.md  CONTRIBUTING.md  CREDITS.md  Cargo.toml  FyneApp.toml  INSTALL.md  Makefile  Physics Deep Dive.md  README.md  benchmark_test.go  cli  constants.go  go.mod  golden_test.go  gr_test.go  gravity_test.go  integration_test.go  meshgen  orbital_elements_test.go  renderer.go  run.sh  simulator.go  spacetime.go  test_helpers_test.go  ui.go  validate-assets  vec3.go  vec3_test.go  viewport.go
.claude/: README.md
.claude/agents/: architect.md  assets-pipeline.md  astrodynamics-sme.md  (+10 more)
.github/: pull_request_template.md
assets/: CREDITS.md
crates/physics_core/: Cargo.toml
crates/physics_core/include/: physics_core.h
crates/physics_core/src/: constants.rs  ffi.rs  gr.rs  lib.rs  sim.rs  vec3.rs
crates/solar_sim_bevy/: Cargo.toml
crates/solar_sim_bevy/src/: belt_plugin.rs  blackhole_plugin.rs  body_catalog.rs  camera_plugin.rs  follow_plugin.rs  label_plugin.rs  launch_core.rs  launch_plugin.rs  main.rs  physics_plugin.rs  render_plugin.rs  skybox_plugin.rs  spacetime_plugin.rs  trail_plugin.rs  ui_about.rs  ui_bodies.rs  ui_controls.rs  ui_physics.rs  ui_plugin.rs  ui_statusbar.rs
docs/: ARCHITECTURE.md  ASSETS.md  CLI.md  CODE_STYLE.md  CONTRIBUTING.md  CREDITS.md  FFI.md  INSTALL.md  INTEGRATION_CHECKLIST.md  LAUNCH_PLANNER.md  NUMERICS.md  PHYSICS.md  RAY_TRACING.md  REMEDIATION_PLAN.md  RENDERING.md  SECURITY.md  TESTING.md  UI.md
packaging/: package-linux.sh  package-macos.sh  package-windows.sh  solar-sim.desktop
(+160 files in other folders)
