[package]
name = "solar_sim_bevy"
version = "0.1.5"
edition = "2021"

[dependencies]
bevy = { workspace = true }
bevy_egui = { workspace = true }
bevy_embedded_assets = "0.12"
physics_core = { path = "../physics_core" }
serde = { workspace = true }
ron = { workspace = true }
rand = { workspace = true }
